[package]
name = "rs_flow"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Adlizm/rs-flow"
keywords = ["flow", "components"]
description = "Base64 encode, decode, escape and unescape for URL applications."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
serde = "1.0.145"
serde_json = "1.0"
async-trait = "0.1.74"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }

[features]
default = []