[package]
name = "rs-flow"
version = "0.6.1"
edition = "2021"
authors = ["Adlizm"]
keywords = ["flow", "components"]
documentation = "https://docs.rs/rs-flow"
repository = "https://github.com/Adlizm/rs-flow"
description = "Create flows to execute based in components created and yours connections"
license = "MIT"

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
thiserror = "1.0.63"
async-trait = { version = "0.1.73" }
serde = { version = "1.0", features = ["derive"] }

rs-flow-macros = { path = "../rs-flow-macros", version = "0.2.0" }

[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"
