[package]
name = "simple-case"
version = "0.1.0"
edition = "2021"
authors = ["Adlizm"]
keywords = ["rs-flow", "examples", "simple-case"]
description = "A simple use case of 'rs-flow's lib"
license = "MIT"

[lints]
workspace = true

[dependencies]
rs-flow = { path = "../../libs/rs-flow" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }