[package]
name = "rs-flow"
version = "0.4.0"
edition = "2021"
authors = ["Adlizm"]
keywords = ["flow", "components"]
description = "Create flows to execute based in components created and yours connections"
license = "MIT"

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
thiserror = "1.0.63"
async-trait = { version = "0.1.73" }
serde = { version = "1.0", features = ["derive"] }

rs-flow-macros = { path = "../rs-flow-macros" }
